deps/v8/test/message/fail/regress-508682215.out
*%(basename)s:{NUMBER}: TypeError: e is not a function
    e();      // throw: e is not a function
    ^
TypeError: e is not a function
    at a (*%(basename)s:{NUMBER}:{NUMBER})
    at *%(basename)s:{NUMBER}:{NUMBER}
